jep 434