@@ -4,8 +4,8 @@
  */
 package com.jyuzawa.onnxruntime;
 
-import java.lang.foreign.MemoryAddress;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment;
 import java.util.Map;
 
 final class ExecutionProviderSimpleMapConfig extends ExecutionProviderMapConfig {
@@ -23,13 +23,13 @@ final class ExecutionProviderSimpleMapConfig extends ExecutionProviderMapConfig 
 
     @Override
     protected void appendToSessionOptions(
-            MemorySession memorySession,
+Arena memorySession,
             ApiImpl api,
-            MemoryAddress sessionOptions,
-            MemoryAddress keys,
-            MemoryAddress values,
+            MemorySegment sessionOptions,
+            MemorySegment keys,
+            MemorySegment values,
             int numProperties) {
         api.checkStatus(api.SessionOptionsAppendExecutionProvider.apply(
-                sessionOptions, memorySession.allocateUtf8String(name).address(), keys, values, numProperties));
+                sessionOptions, memorySession.allocateUtf8String(name), keys, values, numProperties));
     }
 }
