@@ -7,9 +7,8 @@ package com.jyuzawa.onnxruntime;
 import static com.jyuzawa.onnxruntime_extern.onnxruntime_c_api_h.C_LONG;
 import static com.jyuzawa.onnxruntime_extern.onnxruntime_c_api_h.C_POINTER;
 
-import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Map;
@@ -24,35 +23,34 @@ final class ModelMetadataImpl implements ModelMetadata {
     private final long version;
     private final Map<String, String> customMetadata;
 
-    ModelMetadataImpl(ApiImpl api, MemorySession memorySession, MemoryAddress session, MemoryAddress ortAllocator) {
-        MemoryAddress metadata = api.create(memorySession, out -> api.SessionGetModelMetadata.apply(session, out));
-        memorySession.addCloseAction(() -> api.ReleaseModelMetadata.apply(metadata));
+    ModelMetadataImpl(ApiImpl api, Arena memorySession, MemorySegment session, MemorySegment ortAllocator) {
+    	MemorySegment metadata = api.create(memorySession, out -> api.SessionGetModelMetadata.apply(session, out));
         {
-            MemoryAddress pointer = api.create(
+        	MemorySegment pointer = api.create(
                     memorySession, out -> api.ModelMetadataGetDescription.apply(metadata, ortAllocator, out));
             this.description = pointer.getUtf8String(0);
             api.checkStatus(api.AllocatorFree.apply(ortAllocator, pointer));
         }
         {
-            MemoryAddress pointer =
+        	MemorySegment pointer =
                     api.create(memorySession, out -> api.ModelMetadataGetDomain.apply(metadata, ortAllocator, out));
             this.domain = pointer.getUtf8String(0);
             api.checkStatus(api.AllocatorFree.apply(ortAllocator, pointer));
         }
         {
-            MemoryAddress pointer = api.create(
+        	MemorySegment pointer = api.create(
                     memorySession, out -> api.ModelMetadataGetGraphDescription.apply(metadata, ortAllocator, out));
             this.graphDescription = pointer.getUtf8String(0);
             api.checkStatus(api.AllocatorFree.apply(ortAllocator, pointer));
         }
         {
-            MemoryAddress pointer =
+        	MemorySegment pointer =
                     api.create(memorySession, out -> api.ModelMetadataGetGraphName.apply(metadata, ortAllocator, out));
             this.graphName = pointer.getUtf8String(0);
             api.checkStatus(api.AllocatorFree.apply(ortAllocator, pointer));
         }
         {
-            MemoryAddress pointer = api.create(
+        	MemorySegment pointer = api.create(
                     memorySession, out -> api.ModelMetadataGetProducerName.apply(metadata, ortAllocator, out));
             this.producerName = pointer.getUtf8String(0);
             api.checkStatus(api.AllocatorFree.apply(ortAllocator, pointer));
@@ -62,18 +60,18 @@ final class ModelMetadataImpl implements ModelMetadata {
         }
         {
             MemorySegment count = memorySession.allocate(C_LONG);
-            MemoryAddress keys = api.create(
+            MemorySegment keys = api.create(
                     memorySession,
                     out -> api.ModelMetadataGetCustomMetadataMapKeys.apply(
-                            metadata, ortAllocator, out, count.address()));
+                            metadata, ortAllocator, out, count));
             long numKeys = count.getAtIndex(C_LONG, 0);
             if (numKeys == 0) {
                 this.customMetadata = Collections.emptyMap();
             } else {
                 Map<String, String> customMetadata = new LinkedHashMap<>(Math.toIntExact(numKeys));
                 for (long i = 0; i < numKeys; i++) {
-                    MemoryAddress key = keys.getAtIndex(C_POINTER, i);
-                    MemoryAddress value = api.create(
+                	MemorySegment key = keys.getAtIndex(C_POINTER, i);
+                    MemorySegment value = api.create(
                             memorySession,
                             out -> api.ModelMetadataLookupCustomMetadataMap.apply(metadata, ortAllocator, key, out));
                     customMetadata.put(key.getUtf8String(0), value.getUtf8String(0));
@@ -83,6 +81,7 @@ final class ModelMetadataImpl implements ModelMetadata {
                 this.customMetadata = Collections.unmodifiableMap(customMetadata);
             }
         }
+        api.ReleaseModelMetadata.apply(metadata);
     }
 
     @Override
