@@ -6,9 +6,8 @@ package com.jyuzawa.onnxruntime;
 
 import static com.jyuzawa.onnxruntime_extern.onnxruntime_c_api_h.C_LONG;
 
-import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import java.util.NoSuchElementException;
 
 final class TypeInfoImpl implements TypeInfo {
@@ -21,10 +20,10 @@ final class TypeInfoImpl implements TypeInfo {
 
     TypeInfoImpl(
             ApiImpl api,
-            MemoryAddress typeInfo,
-            MemorySession allocator,
-            MemorySession sessionAllocator,
-            MemoryAddress ortAllocator) {
+            MemorySegment typeInfo,
+            Arena allocator,
+            Arena sessionAllocator,
+            MemorySegment ortAllocator) {
         allocator.addCloseAction(() -> api.ReleaseTypeInfo.apply(typeInfo));
         this.type =
                 OnnxType.forNumber(api.extractInt(allocator, out -> api.GetOnnxTypeFromTypeInfo.apply(typeInfo, out)));
@@ -33,27 +32,27 @@ final class TypeInfoImpl implements TypeInfo {
         TypeInfoImpl sequenceInfo = null;
 
         if (type == OnnxType.TENSOR || type == OnnxType.SPARSETENSOR) {
-            MemoryAddress ortTensorInfo =
+        	MemorySegment ortTensorInfo =
                     api.create(allocator, out -> api.CastTypeInfoToTensorInfo.apply(typeInfo, out));
             OnnxTensorElementDataType dataType = OnnxTensorElementDataType.forNumber(
                     api.extractInt(allocator, out -> api.GetTensorElementType.apply(ortTensorInfo, out)));
             int dimCount = api.extractInt(allocator, out -> api.GetDimensionsCount.apply(ortTensorInfo, out));
             MemorySegment dims = sessionAllocator.allocateArray(C_LONG, dimCount);
-            api.checkStatus(api.GetDimensions.apply(ortTensorInfo, dims.address(), dimCount));
+            api.checkStatus(api.GetDimensions.apply(ortTensorInfo, dims, dimCount));
             long elementCount =
                     api.extractInt(allocator, out -> api.GetTensorShapeElementCount.apply(ortTensorInfo, out));
             tensorInfo = new TensorInfoImpl(dataType, dims, dimCount, elementCount);
         } else if (type == OnnxType.MAP) {
-            MemoryAddress ortMapInfo = api.create(allocator, out -> api.CastTypeInfoToMapTypeInfo.apply(typeInfo, out));
+        	MemorySegment ortMapInfo = api.create(allocator, out -> api.CastTypeInfoToMapTypeInfo.apply(typeInfo, out));
             OnnxTensorElementDataType keyType = OnnxTensorElementDataType.forNumber(
                     api.extractInt(allocator, out -> api.GetMapKeyType.apply(ortMapInfo, out)));
-            MemoryAddress valueTypeAddress = api.create(allocator, out -> api.GetMapValueType.apply(ortMapInfo, out));
+            MemorySegment valueTypeAddress = api.create(allocator, out -> api.GetMapValueType.apply(ortMapInfo, out));
             mapInfo = new MapInfoImpl(
                     keyType, new TypeInfoImpl(api, valueTypeAddress, allocator, sessionAllocator, ortAllocator));
         } else if (type == OnnxType.SEQUENCE) {
-            MemoryAddress ortSequenceInfo =
+        	MemorySegment ortSequenceInfo =
                     api.create(allocator, out -> api.CastTypeInfoToSequenceTypeInfo.apply(typeInfo, out));
-            MemoryAddress valueTypeAddress =
+        	MemorySegment valueTypeAddress =
                     api.create(allocator, out -> api.GetSequenceElementType.apply(ortSequenceInfo, out));
             sequenceInfo = new TypeInfoImpl(api, valueTypeAddress, allocator, sessionAllocator, ortAllocator);
         } else {
@@ -105,7 +104,7 @@ final class TypeInfoImpl implements TypeInfo {
         return sequenceInfo;
     }
 
-    final OnnxValueImpl newValue(ValueContext valueContext, MemoryAddress ortValueAddress) {
+    final OnnxValueImpl newValue(ValueContext valueContext, MemorySegment ortValueAddress) {
         switch (type) {
             case TENSOR:
                 return tensorInfo.newValue(valueContext, ortValueAddress);
