@@ -4,13 +4,13 @@
  */
 package com.jyuzawa.onnxruntime;
 
-import java.lang.foreign.MemoryAddress;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment;
 import java.lang.foreign.SegmentAllocator;
 
 record ValueContext(
         ApiImpl api,
         SegmentAllocator segmentAllocator,
-        MemorySession memorySession,
-        MemoryAddress ortAllocatorAddress,
-        MemoryAddress memoryInfoAddress) {}
+        Arena memorySession,
+        MemorySegment ortAllocatorAddress,
+        MemorySegment memoryInfoAddress) {}
